[package]
name = "orchid"
version = "0.1.0"
authors = ["jfto23 <jeanfrancoisto@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
mint = "0.5.5"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
uuid = { version = "0.8", features = ["serde", "v4"] } 
rand_xoshiro = { version = "0.4.0", features = ["serde1"] }
